# django-templatestore

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  locustfile.py  migrate_created_by.py  nodejs.nix  package-lock.json  package.json  requirements.txt  setup.cfg  shell.nix  update_data.py
.github/workflows/: comment-on-pr.yml  python-basic-checks.yml
docs/: README.md  apidocs.swagger  swagger.json
editor/: README.md  __init__.py  admin.py  app_settings.py  apps.py  models.py  serializers.py  urls.py  views.py
editor/frontend/: .babelrc  .eslintrc  README.md  index.html  package-lock.json  package.json  webpack.config.js
editor/migrations/: 0001_initial.py  0002_auto_20200211_0709.py  0003_auto_20200211_0714.py  0004_auto_20200211_0724.py  0005_auto_20200211_0728.py
editor/templates/: index.html
etc/scripts/: migrate_created_by.py
example/: README.md  secrets.json  settings.py  urls.py
explorer/frontend/: package-lock.json  package.json
templatestore/: README.md  __init__.py  admin.py  app_settings.py  apps.py  models.py  uat_to_prod_copy_script.py  urls.py  utils.py  views.py
templatestore/frontend/: .babelrc  .eslintrc  .prettierrc  README.md  package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
templatestore/migrations/: 0001_initial.py  0002_templateconfig_attributes.py  0003_auto_20200608_2208.py  0003_templateversion_version_alias.py  0004_auto_20200624_1148.py  0004_merge_20200624_1240.py  0004_templateversion_version_alias.py  0005_auto_20200730_0045.py  0006_template_user_email.py  (+13 more)
(+44 files in other folders)
